# v0-codex-issues-visualizer

./: .gitignore  README.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  reflection.md  tsconfig.json  vercel.json
app/: globals.css  layout.tsx  page.tsx
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  cache.py  config.py  db.py  main.py  repo.py  schemas.py  seed_data.py
backend/app/routes/: analytics.py  categories.py  health.py  issues.py  root_causes.py  timeline.py  user_segments.py
backend/scripts/: export_seed_json.py  generate_sql_migration.py
backend/tests/: conftest.py  test_analytics.py  test_categories.py  test_health.py  test_issues.py  test_pain_points_and_tiers.py  test_root_causes.py  test_timeline.py  test_user_segments.py
codex-analysis/: CATEGORY_ANALYSIS_SUMMARY.md  Codex_Category_Analysis.xlsx  codex_analysis_data_detailed_by_category.json
components/: global-error-handler.tsx
docs/: ARCHITECTURE.md  BUGS.md  CLASSIFICATION_EVOLUTION_PLAN.md  CLUSTERING_DESIGN.md  CODEX_ISSUE_CLASSIFICATION_OPENAI.md  CODEX_PHASED_EXECUTION_PROMPT.md  CODEX_REQUIRED_FILE_CHECKS.md  ERROR_TRACKING_SYSTEM.md  PHASE_4_4A_COVERAGE_RUNBOOK.md  SCORING.md  THREE_LAYER_PROMPT_EVALUATION.md
hooks/: use-dashboard-data.ts
lib/: analysis-api.ts  types.ts
reviews/: pr-186-review.md
scripts/: 001_create_issues_schema.sql  002_create_issues_schema_v2.sql  003_add_stackoverflow_source.sql  003_create_analysis_schema.sql  003_seed_data.json  (+57 more)
(+264 files in other folders)
