[project]
name = "codex-market-analysis-backend"
version = "0.1.0"
description = "FastAPI backend for the Codex Market Analysis Platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "asyncpg>=0.30",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "redis>=5.2",
  "httpx>=0.27",
  "slowapi>=0.1.9",
  "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "anyio>=4.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".", ".."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
